--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,4 @@
+GEMINI_API_KEY=AIzaSyCeMILnOAxle1Urxahtj8lrbijDRyAlgS8
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/plantApp
 JWT_SECRET=yourSecretKey
