--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +15,15 @@
     "@google/generative-ai": "^0.24.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
-    "path": "^0.12.7"
+    "nodemon": "^3.1.10",
+    "path": "^0.12.7",
+    "streamifier": "^0.1.1"
   }
 }
