--- a/Server/package.json
+++ b/Server/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1"
   }
 }
