--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,6 @@
-GEMINI_API_KEY=AIzaSyB04wHawAQ-GCrUyuAcvstqfMM66qudqZU
+GEMINI_API_KEY=AIzaSyBHXLYc4hrlVFafKd3hsvqniK1Nytw6pDI
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/plantApp
+MONGO_URI=mongodb+srv://2023ugec096:oipTeXBhHNG0nig0@cluster0.leik5it.mongodb.net/greenguard
 JWT_SECRET=yourSecretKey
 CLOUDINARY_CLOUD_NAME=dsmu19doh
 CLOUDINARY_API_KEY=623844376768771
