--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,7 @@
 GEMINI_API_KEY=AIzaSyAJqL_jAfA35LzPfH73oHxJG_trPtu0DfM
 PORT=5000
-MONGO_URI=mongodb+srv://2023ugec096:oipTeXBhHNG0nig0@cluster0.leik5it.mongodb.net/greenguard
+MONGO_URI= mongodb://127.0.0.1:27017/greenguard
+# MONGO_URI=mongodb+srv://2023ugec096:oipTeXBhHNG0nig0@cluster0.leik5it.mongodb.net/greenguard
 JWT_SECRET=yourSecretKey
 CLOUDINARY_CLOUD_NAME=dsmu19doh
 CLOUDINARY_API_KEY=623844376768771
